syntax = "proto3";

package task_proto;

option go_package = "task/task_proto";

service Tasks {
    rpc CreateTask (CreateTaskRequest) returns (Task) {}
    rpc GetTaskById (GetTaskByIdRequest) returns (Task) {}
    rpc DeleteTask  (DeleteTaskRequest) returns (Empty) {}
    rpc GetIdAndRespondTask (GetIdAndRespondTaskRequest) returns (TaskResponse) {}
}

message Task {
    string id = 1;
    string name = 2;
}

message CreateTaskRequest {
    Task task = 1;
}

message GetTaskByIdRequest {
    string id = 1;
}

message DeleteTaskRequest {
    string id = 1;
}

message GetIdAndRespondTaskRequest {
    string id = 1;
}

message TaskResponse {
    string task_name = 1;
}

message Empty {}